# flappy-evolution

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  evolution.cpp  evolution.h  example_simulation.cpp  game_types.h  main.cpp  neural_network.cpp  neural_network.h  renderer.cpp  renderer.h  simulation.cpp  simulation.h  test_neural_network.cpp  train.cpp
